core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@unsupported_fn_type.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Unsupported function type
In src/ast/snapshots/span_testing/unsupported_fn_type.rs:3:41:
...impl Fn<>) {}...
        ^^^^
Expected parentheses
